// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ExpenseList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop show-for-desktop--primary"
      id="sortByName"
    >
      Expense
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
    <div
      className="show-for-desktop"
      id="sortByDate"
    >
      Date created
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
    <div
      className="show-for-desktop"
      id="sortByAmount"
    >
      Amount
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No expenses yet
      </span>
    </div>
  </div>
</div>
`;

exports[`Test with all expenses Should render ExpenseList with testExpenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Expenses
    </div>
    <div
      className="show-for-desktop show-for-desktop--primary"
      id="sortByName"
    >
      Expense
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
    <div
      className="show-for-desktop"
      id="sortByDate"
    >
      Date created
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
    <div
      className="show-for-desktop"
      id="sortByAmount"
    >
      Amount
      <img
        className="arrow arrow--up"
        onClick={[Function]}
        src="/images/arrow-up.jpg"
      />
      <img
        className="arrow arrow--down"
        onClick={[Function]}
        src="/images/arrow-down.jpg"
      />
    </div>
  </div>
  <div
    className="list-body"
  >
    <Connect(ExpenseListItem)
      amount={100}
      createdAt={0}
      description="one"
      id="123"
      key="123"
    />
    <Connect(ExpenseListItem)
      amount={200}
      createdAt={-345600000}
      description="two"
      id="456"
      key="456"
    />
    <Connect(ExpenseListItem)
      amount={10}
      createdAt={345600000}
      description="three"
      id="789"
      key="789"
    />
  </div>
</div>
`;
